--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "Kirubel Girma",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "pusher": "^3.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
